--- a/package.json
+++ b/package.json
@@ -3,12 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.8.2",
+    "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bip39": "^3.0.2",
+    "crypto-js": "^3.1.9-1",
+    "eth-json-rpc-infura": "^4.0.2",
+    "ethereum-hdwallet": "^0.0.26",
+    "ethereumjs-util": "^6.2.0",
+    "ethereumjs-wallet": "^0.6.3",
+    "ethjs": "^0.4.0",
     "react": "^16.12.0",
+    "react-cookies": "^0.1.1",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-cryptocoins": "^1.0.11",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-fastclick": "^3.0.2",
+    "react-jazzicon": "^0.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "react-swipeable-views": "^0.13.3",
+    "typeface-roboto": "^0.0.75",
+    "web3": "^1.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
