--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "my-wallet",
+  "name": "bishen-wallet",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "Apache-2.0",
+  "homepage": "https://fankouzu.github.io/bishen-wallet",
   "dependencies": {
     "@material-ui/core": "^4.8.2",
     "@material-ui/icons": "^4.5.1",
@@ -14,7 +16,11 @@
     "ethereum-hdwallet": "^0.0.26",
     "ethereumjs-util": "^6.2.0",
     "ethereumjs-wallet": "^0.6.3",
+    "ethers": "^4.0.42",
+    "etherscan-api-cn": "^10.0.5",
     "ethjs": "^0.4.0",
+    "gh-pages": "^2.2.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-cookies": "^0.1.1",
     "react-copy-to-clipboard": "^5.0.2",
@@ -32,7 +38,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
