--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ethjs": "^0.4.0",
     "gh-pages": "^2.2.0",
     "moment": "^2.24.0",
+    "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-cookies": "^0.1.1",
     "react-copy-to-clipboard": "^5.0.2",
