--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "ethereumjs-wallet": "^0.6.3",
     "ethers": "^4.0.42",
     "etherscan-api-cn": "^10.0.5",
-    "ethjs": "^0.4.0",
     "gh-pages": "^2.2.0",
+    "is-ethereum-address": "^1.0.2",
     "moment": "^2.24.0",
     "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
@@ -31,7 +31,7 @@
     "react-jazzicon": "^0.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-swipeable-views": "^0.13.3",
+    "react-swipeable-views": "0.13.3",
     "typeface-roboto": "^0.0.75",
     "web3": "^1.2.4"
   },
